added export grade code with no event handler

--- a/src/org/cict/evaluation/curricular-level.fxml
+++ b/src/org/cict/evaluation/curricular-level.fxml
@@ -24,7 +24,7 @@
                         <Font size="36.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgvw_export_grades" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@src/img/currical_level.png" />
                            </image>
