--- a/src/org/cict/evaluation/evaluation_home.fxml
+++ b/src/org/cict/evaluation/evaluation_home.fxml
@@ -385,37 +385,47 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchor_main1" layoutX="10.0" layoutY="77.0" prefHeight="633.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="67.0">
+      <StackPane layoutY="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="67.0">
          <children>
-            <StackPane layoutY="40.0" prefHeight="558.0" prefWidth="295.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
+            <AnchorPane fx:id="anchor_main1" prefHeight="633.0" prefWidth="300.0" visible="false">
                <children>
-                  <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0">
-                     <StackPane.margin>
-                        <Insets bottom="10.0" />
-                     </StackPane.margin></VBox>
-                  <VBox fx:id="vbox_waiting_queue" alignment="BOTTOM_LEFT" prefHeight="544.0" prefWidth="280.0">
+                  <StackPane layoutY="40.0" prefHeight="558.0" prefWidth="295.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
                      <children>
-                        <Label text="Waiting..." textFill="#37474f">
-                           <font>
-                              <Font size="19.0" />
-                           </font>
-                        </Label>
-                        <Line endX="100.0" startX="-100.0" />
+                        <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0">
+                           <StackPane.margin>
+                              <Insets bottom="10.0" />
+                           </StackPane.margin>
+                        </VBox>
+                        <VBox fx:id="vbox_waiting_queue" alignment="BOTTOM_LEFT" prefHeight="544.0" prefWidth="280.0">
+                           <children>
+                              <Label text="Waiting..." textFill="#37474f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <Line endX="100.0" startX="-100.0" />
+                           </children>
+                           <StackPane.margin>
+                              <Insets bottom="10.0" left="15.0" top="10.0" />
+                           </StackPane.margin>
+                        </VBox>
                      </children>
-                     <StackPane.margin>
-                        <Insets bottom="10.0" left="15.0" top="10.0" />
-                     </StackPane.margin>
-                  </VBox>
+                  </StackPane>
+                  <Label layoutX="45.0" layoutY="14.0" text="Student Queue" textFill="#37474f" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="17.0" layoutY="599.0" text="Total Enrollee On Queue:" />
+                  <Label fx:id="lbl_total_queue" layoutX="153.0" layoutY="599.0" text="10" />
                </children>
-            </StackPane>
-            <Label layoutX="45.0" layoutY="14.0" text="Student Queue" textFill="#37474f" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Label>
-            <Label layoutX="17.0" layoutY="599.0" text="Total Enrollee On Queue:" />
-            <Label fx:id="lbl_total_queue" layoutX="153.0" layoutY="599.0" text="10" />
+            </AnchorPane>
+            <VBox fx:id="vboxRevisedNextQue" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #5E9CE9;">
+               <StackPane.margin>
+                  <Insets top="2.0" />
+               </StackPane.margin>
+            </VBox>
          </children>
-      </AnchorPane>
+      </StackPane>
    </children>
 </AnchorPane>
